name:           learn-haskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Raj

executable learn-haskell
  hs-source-dirs:  src
  main-is:         json-library/Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   Haskell-Dump,
                   GrahamScanAlgorithm,
                   ExtractDefines,
                   json-library.SimpleJSON,
                   SimplePrint,
                   PrettyPrint,
                   Prettify

